<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/mStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/mData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/connectStatus"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mConnectStatus"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/disconnected"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/mDeviceRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mStatus">

        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/receiveData"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mReceiveData"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/mDeviceRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/mButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mDeviceRecyclerView" />

    <LinearLayout
        android:id="@+id/mButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/mSendButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mDeviceRecyclerView">

        <Button
            android:id="@+id/mDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/disconnect" />

        <Button
            android:id="@+id/mOpen"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/openBle" />

        <Button
            android:id="@+id/mScan"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/mScan" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mSendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mButton">

        <EditText
            android:id="@+id/mSendData"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/mSend"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/send" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>